erDiagram
  PORTALUSER ||--o| STUDENT : user
  PORTALUSER ||--o{ STUDENT : parent_user
  PORTALUSER ||--o{ STUDENT : teacher_user
  PORTALUSER ||--o{ TEACHERSTUDENTASSIGNMENT : teacher
  STUDENT ||--o{ TEACHERSTUDENTASSIGNMENT : student
  COURSE ||--o{ TEACHERSTUDENTASSIGNMENT : course
  COURSE ||--o{ COURSECATEGORY : categories
  COURSECATEGORY ||--o{ COURSELEVEL : levels
  COURSE ||--o{ COURSECONTENT : contents
  COURSELEVEL ||--o{ COURSECONTENT : contents
  STUDENT ||--o{ STUDENTCONTENTACCESS : content_accesses
  COURSECONTENT ||--o{ STUDENTCONTENTACCESS : student_accesses
  PORTALUSER ||--o{ HOMEWORKASSIGNMENT : teacher
  STUDENT ||--o{ HOMEWORKASSIGNMENT : homework_assignments
  COURSECONTENT ||--o{ HOMEWORKASSIGNMENT : homework_assignments
  HOMEWORKSUMMARY ||--o{ HOMEWORKASSIGNMENT : assignments
  HOMEWORKASSIGNMENT ||--o{ HOMEWORKIMPORTJOB : import_jobs
  COURSECONTENT ||--o{ HOMEWORKIMPORTJOB : homework_import_jobs
  HOMEWORKIMPORTJOB ||--o{ HOMEWORKQUESTION : questions
  HOMEWORKASSIGNMENT ||--o{ HOMEWORKQUESTION : questions
  HOMEWORKASSIGNMENT ||--o{ HOMEWORKSUBMISSION : submissions
  STUDENT ||--o{ HOMEWORKSUBMISSION : homework_submissions
  HOMEWORKSUBMISSION ||--o{ HOMEWORKSUBMISSIONANSWER : answers
  HOMEWORKQUESTION ||--o{ HOMEWORKSUBMISSIONANSWER : submission_answers
  PORTALUSER ||--o{ HOMEWORKCOMPLETIONSTAT : teacher
  STUDENT ||--o{ HOMEWORKCOMPLETIONSTAT : student
  HOMEWORKCOMPLETIONSTAT ||--o{ HOMEWORKCOMPLETIONSTATMISSINGASSIGNMENT : missing_assignments
  HOMEWORKASSIGNMENT ||--o{ HOMEWORKCOMPLETIONSTATMISSINGASSIGNMENT : completion_stat_missing_links
  STUDENT ||--o{ TEACHEREVALUATION : teacher_evaluations
  STUDENT ||--o{ REWARDRECORD : reward_records
  STUDENT ||--o{ LESSONHOURLEDGER : lesson_hour_ledgers
